Work on bug that is causing floating footer
- Look at bug that was causing footer to not be anchored to the
bottom of the browser window in cases when the content was too shortcut

Andrew

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,6 +5,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   padding-top: 45px;
+  height: 100%;
 }
 
 h1 {
@@ -24,12 +25,6 @@ p {
   font-size: 26px;
 }
 
-.navbar-bottom {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
 .dropdown:hover .dropdown-menu {
   display: block;
 }
